Silence javac deprecation warnings.